# Loop-Unroll-Factor-Prediction

./: AnalysisPass.cpp  LUF_predictor.py  README.md  compile_software.py  gather_loops_metrics.py  hyperfine_analysis.py  run_hyperfine.py  run_unrolls.py
benchmark_codes/aes/: aes.h  aes.llvm
benchmark_codes/fft-strided/: fft.llvm
benchmark_codes/nw/: nw.llvm
benchmark_codes/sort-merge/: sort.llvm
benchmark_codes/triad/: triad.llvm
config files/MachSuite/: bfs_bulk  gemm_ncubed
config files/SHOC/: md  ss_sort
framework/: .gitignore  Makefile  README.md  run.sh
framework/frontend/: desugar.py  irgen.py  lexer.py  typecheck.py  util.py
framework/llvm-passes/: Makefile
hardware_ML/: LUF_predictor.py  compile_hardware.py  gather_loops_metrics.py  run_unrolls.py
hardware_ML/aes/: aes_dbg.llvm
hardware_ML/bfs-bulk/: bfs.llvm  bfs_dbg.ll
hardware_ML/bfs-queue/: bfs.h  bfs_dbg.ll  bfs_dbg.llvm
hardware_ML/code/: Results.xlsx  gather_loops_metrics.py  loops_data.csv
hardware_ML/fft/: fft_dbg.llvm
hardware_ML/fft-strided/: fft_dbg.ll
hardware_ML/gather_loops_metrics/llvm-passes/: CMakeLists.txt
hardware_ML/gemm-ncubed/: gemm_dbg.ll  gemm_dbg.llvm
hardware_ML/kmp/: kmp_dbg.ll
hardware_ML/md/: md.h  md_dbg.ll
hardware_ML/md-grid/: md.h  md.ll  md.llvm  md_dbg.ll  md_dbg.llvm
hardware_ML/nw/: nw.h
software_ML/: compile_software_ML.py  hyperfine_analysis_ML.py  plot_whisker.py  run_hyperfine_ML.py
software_clang/: compile_software_all.py  compile_software_clang.py  hyperfine_analysis_clang.py  plot_whisker.py  run_hyperfine_all.py
(+1865 files in other folders)
